<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"/>

        <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Spinner
                android:id="@+id/s_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_latitude"/>

        <EditText
                android:id="@+id/et_latitude_degree"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:text="&#xb0;"/>

        <EditText
                android:id="@+id/et_latitude_minutes"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:text="&#x39;"/>

        <EditText
                android:id="@+id/et_latitude_seconds"
                android:layout_width="0px"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:text="&#x34;"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Spinner
                android:id="@+id/s_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_longitude"/>

        <EditText
                android:id="@+id/et_longitude_degree"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:text="&#xb0;"/>

        <EditText
                android:id="@+id/et_longitude_minutes"
                android:layout_width="0px"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:text="&#x39;"/>

        <EditText
                android:id="@+id/et_longitude_seconds"
                android:layout_width="0px"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:text="&#x34;"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/b_add_point_ok"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_point_dialog_add"/>

        <Button
                android:id="@+id/b_add_point_cancel"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_point_dialog_cancel"/>
    </LinearLayout>

    <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>